--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -20,10 +20,6 @@ concurrency:
   group: 'pages'
   cancel-in-progress: true
 
-defaults:
-  run:
-    working-directory: ts-react
-
 jobs:
   # Single deploy job since we're just deploying
   deploy:
@@ -34,6 +30,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Open React folder
+        working-directory: ts-react
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
