--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Open React folder
-        working-directory: ts-react
+        run: 'cd ./ts-react'
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
