--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -30,16 +30,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Change to app directory
+        working-directory: ./ts-react  # Set the working directory to your React app folder
+        run: cd ./ts-react
+        
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
       - name: Install dependencies        
-        working-directory: ./ts-react  # Set the working directory to your React app folder
         run: npm install
       - name: Build
-        working-directory: ./ts-react  # Set the working directory to your React app folder
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
