--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -32,8 +32,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Change to app directory
-        working-directory: ./ts-react  # Set the working directory to your React app folder
-        # run: cd ./ts-react
+        # working-directory: ./ts-react  # Set the working directory to your React app folder
+        run: cd ./ts-react
         
       - name: Set up Node
         uses: actions/setup-node@v3
