--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -33,7 +33,9 @@ jobs:
 
       - name: Change to app directory
         # working-directory: ./ts-react  # Set the working directory to your React app folder
-        run: cd ./ts-react
+        run: |
+          cd ./ts-react
+          ls -a
         
       - name: Set up Node
         uses: actions/setup-node@v3
