--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -32,10 +32,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Change to app directory
-        # working-directory: ./ts-react  # Set the working directory to your React app folder
         run: |
           cd ./ts-react
           ls -a
+        working-directory: ./ts-react  # Set the working directory to your React app folder
         
       - name: Set up Node
         uses: actions/setup-node@v3
