--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -32,9 +32,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Change to app directory
-        run: |
-          cd ./ts-react
-          ls -a
+        run: ls -a
         working-directory: ./ts-react  # Set the working directory to your React app folder
         
       - name: Set up Node
