--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -32,17 +32,16 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Set up Node
-        working-directory: ./ts-react  # Set the working directory to your React app folder
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-          
-      - name: Install dependencies        
-        run: npm install
-      
+        run: |
+          cd ./ts-react  # Set the working directory to your React app folder
+          npm install
+        shell: bash
+
       - name: Build
-        run: npm run build
+        run: |
+          cd ./ts-react  # Set the working directory to your React app folder
+          npm run build
+        shell: bash
       
       - name: Setup Pages
         uses: actions/configure-pages@v3
