--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload dist repository
-          path: './dist'
+          path: './ts-react/dist'
       
       - name: Deploy to GitHub Pages
         id: deployment
